# rust-challenge

./: .gitignore  Cargo.toml  README.md
benches/: pipeline.rs
src/: app.rs  defaults.rs  lib.rs  main.rs  model.rs  pipeline_orig.rs
src/errors/: mod.rs
src/factories/: clickhouse.rs  defaults.rs  generator.rs  mod.rs
src/models/: mod.rs  transfer.rs  user_stats.rs
src/repositories/: clickhouse.rs  mock.rs  mod.rs  storage.rs
src/services/: analytics.rs  generator.rs  mod.rs  pipeline.rs  pipeline_orig.rs
src/services/stats/: accumulator.rs  calculator.rs  mod.rs  pipeline.rs
src/services/storage/: mock.rs  mod.rs
src/utils/: env.rs  time.rs
tests/: app_integration.rs
