[package]
name = "rust_challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
mockall = "0.13.1"
clickhouse = "0.12.2"
dotenv = "0.15.0"

[dev-dependencies]
criterion = "0.6.0"
clickhouse = { version = "0.12.2", features = ["test-util"] }

[[bench]]
name = "pipeline"
harness = false
