[package]
name = "rust_challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
mockall = "0.13.1"
clickhouse = { version = "0.12.2", features = ["rustls-tls"] }
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
criterion = "0.6.0"
clickhouse = { version = "0.12.2", features = ["test-util"] }

[[bench]]
name = "pipeline"
harness = false
